# alps-jobreport

./: .gitignore  CMakeLists.txt
include/: argparse.hpp  args.hpp  array.hpp  column.hpp  dataframe.hpp  dataframe_io.hpp  file_io.hpp  filelock.hpp  jobreport.hpp  macros.hpp  slurm_job.hpp  stats_io.hpp  status.hpp  utils.hpp
src/: compile.sh  main.cpp
